--- a/YoakkeCompilerBranch2/YoakkeCompilerBranch2.vcxproj
+++ b/YoakkeCompilerBranch2/YoakkeCompilerBranch2.vcxproj
@@ -122,6 +122,7 @@
     <ClCompile Include="src\ast\expr.cpp" />
     <ClCompile Include="src\ast\node.cpp" />
     <ClCompile Include="src\ast\pattern.cpp" />
+    <ClCompile Include="src\ast\type_desc.cpp" />
     <ClCompile Include="src\debug\debug_printer.cpp" />
     <ClCompile Include="src\lexing\lex_error.cpp" />
     <ClCompile Include="src\lexing\position.cpp" />
@@ -137,6 +138,7 @@
     <ClInclude Include="src\ast\expr.h" />
     <ClInclude Include="src\ast\node.h" />
     <ClInclude Include="src\ast\pattern.h" />
+    <ClInclude Include="src\ast\type_desc.h" />
     <ClInclude Include="src\common.h" />
     <ClInclude Include="src\debug\debug_printer.h" />
     <ClInclude Include="src\lexing\lexer.h" />
