--- a/YoakkeCompilerBranch2/YoakkeCompilerBranch2.vcxproj
+++ b/YoakkeCompilerBranch2/YoakkeCompilerBranch2.vcxproj
@@ -122,6 +122,7 @@
     <ClCompile Include="src\ast\expr.cpp" />
     <ClCompile Include="src\ast\node.cpp" />
     <ClCompile Include="src\ast\pattern.cpp" />
+    <ClCompile Include="src\ast\stmt.cpp" />
     <ClCompile Include="src\ast\type_desc.cpp" />
     <ClCompile Include="src\debug\debug_printer.cpp" />
     <ClCompile Include="src\lexing\lex_error.cpp" />
@@ -131,6 +132,7 @@
     <ClCompile Include="src\parsing\parse_error.cpp" />
     <ClCompile Include="src\parsing\yparser.cpp" />
     <ClCompile Include="src\semantics\scope.cpp" />
+    <ClCompile Include="src\semantics\symbol.cpp" />
     <ClCompile Include="src\utility\fmt_in.cpp" />
     <ClCompile Include="src\utility\fmt_out.cpp" />
     <ClCompile Include="src\yerror.cpp" />
@@ -139,6 +141,7 @@
     <ClInclude Include="src\ast\expr.h" />
     <ClInclude Include="src\ast\node.h" />
     <ClInclude Include="src\ast\pattern.h" />
+    <ClInclude Include="src\ast\stmt.h" />
     <ClInclude Include="src\ast\type_desc.h" />
     <ClInclude Include="src\common.h" />
     <ClInclude Include="src\debug\debug_printer.h" />
