--- a/YoakkeCompilerBranch2/YoakkeCompilerBranch2.vcxproj.filters
+++ b/YoakkeCompilerBranch2/YoakkeCompilerBranch2.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="src\ast\stmt.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\semantics\symbol_table.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\common.h">
