--- a/.gitignore
+++ b/.gitignore
@@ -27,5 +27,6 @@ YoakkeCompiler/src/Parsing/ExprParser.cpp~RFcdfbad9.TMP
 *.ipch
 *.ipch
 *.ipch
+dependencies
 .vs
 .vs/YoakkeCompiler/v15/ipch/AutoPCH/YOAKKECOMPILERBRANCH2-3df5f346/MAIN-543eb5c3/MAIN.ipch
