--- a/YoakkeCompilerBranch2/YoakkeCompilerBranch2.vcxproj.filters
+++ b/YoakkeCompilerBranch2/YoakkeCompilerBranch2.vcxproj.filters
@@ -51,9 +51,6 @@
     <ClCompile Include="src\lexing\lex_error.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\debug\debug_printer.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\ast\pattern.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -137,9 +134,6 @@
     <ClInclude Include="src\lexing\lex_error.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\debug\debug_printer.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\ast\pattern.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -176,10 +170,10 @@
     <ClInclude Include="src\semantics\semantic_checker.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\ast\mch_bindings.h">
+    <ClInclude Include="src\semantics\typed_symbol.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\semantics\typed_symbol.h">
+    <ClInclude Include="src\utility\match.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
