Started format output

--- a/YoakkeCompilerBranch2/YoakkeCompilerBranch2.vcxproj
+++ b/YoakkeCompilerBranch2/YoakkeCompilerBranch2.vcxproj
@@ -125,12 +125,14 @@
     <ClCompile Include="src\ast\pattern.cpp" />
     <ClCompile Include="src\ast\stmt.cpp" />
     <ClCompile Include="src\ast\type_desc.cpp" />
-    <ClCompile Include="src\lexing\file_handle.cpp" />
+    <ClCompile Include="src\utility\console.cpp" />
+    <ClCompile Include="src\utility\file_handle.cpp" />
     <ClCompile Include="src\lexing\position.cpp" />
     <ClCompile Include="src\lexing\token.cpp" />
     <ClCompile Include="src\lexing\ylexer.cpp" />
     <ClCompile Include="src\parsing\parser.cpp" />
     <ClCompile Include="src\parsing\yparser.cpp" />
+    <ClCompile Include="src\reporting\code_printer.cpp" />
     <ClCompile Include="src\reporting\report_msg.cpp" />
     <ClCompile Include="src\reporting\report_stream.cpp" />
     <ClCompile Include="src\semantics\scope.cpp" />
@@ -148,7 +150,8 @@
     <ClInclude Include="src\ast\stmt.h" />
     <ClInclude Include="src\ast\type_desc.h" />
     <ClInclude Include="src\common.h" />
-    <ClInclude Include="src\lexing\file_handle.h" />
+    <ClInclude Include="src\utility\console.h" />
+    <ClInclude Include="src\utility\file_handle.h" />
     <ClInclude Include="src\lexing\lexer.h" />
     <ClInclude Include="src\lexing\position.h" />
     <ClInclude Include="src\lexing\token.h" />
@@ -162,6 +165,7 @@
     <ClInclude Include="src\parsing\prec_parser.h" />
     <ClInclude Include="src\parsing\type_rules.h" />
     <ClInclude Include="src\parsing\yparser.h" />
+    <ClInclude Include="src\reporting\code_printer.h" />
     <ClInclude Include="src\reporting\report_msg.h" />
     <ClInclude Include="src\reporting\report_stream.h" />
     <ClInclude Include="src\semantics\scope.h" />
@@ -172,6 +176,7 @@
     <ClInclude Include="src\semantics\type_symbol.h" />
     <ClInclude Include="src\utility\fmt_out.h" />
     <ClInclude Include="src\utility\match.h" />
+    <ClInclude Include="src\utility\math.h" />
     <ClInclude Include="src\utility\opt_map.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
